<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="AbbLinkinRequestStatus_Typ" Id="{6ed46d5e-f2a5-4e32-a29c-f034b05f637f}">
    <Declaration><![CDATA[// Copyright (c) 2024 Loupe (https://loupe.team), provided under the MIT License.
TYPE AbbLinkinRequestStatus_Typ :
STRUCT
	busy		: BOOL;
	done		: BOOL;
	error		: BOOL;
	errorID		: DINT;
	errorMsg	: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>